<package>
  <name>roomba_500_series</name>
  <version>0.1.0</version>
  <description>

     iRobot Roomba 500 package based on the iRobot Open Interface Specification. There are two nodes available, a light node which exposes odometry and velocity commands, and a full node which exposes all capabilities of the underlying library.
  </description>
  <author email="unknown@unknown.com">Gonçalo Cabrita</author>
  <maintainer email="garaemon@gmail.com">Ryohei Ueda</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/roomba_500_series</url>
  <export>
    <cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib -Wl,-rpath,${prefix}/lib -lirobot_oi -lgo_dock"/>
  </export>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>cereal_port</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>cereal_port</run_depend>

</package>


